force-app/main/default/objects/PrecisionLenderShowField__c/PrecisionLenderShowField__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Precision Lender Show Field</label>
</CustomObject>