force-app/main/default/objects/PrecisionLenderShowField__c/fields/Average_Assets__c.field-meta.xml
<CustomField>
    <fullName>Average_Assets__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Average Assets</label>
    <type>Checkbox</type>
</CustomField>