force-app/main/default/objects/PrecisionLenderShowField__c/fields/Current_Deposit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Deposit_Balance__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Current Deposit Balance</label>
    <type>Checkbox</type>
</CustomField>