force-app/main/default/objects/PrecisionLenderShowField__c/fields/Current_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Balance__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Current Loan Balance</label>
    <type>Checkbox</type>
</CustomField>