force-app/main/default/objects/PrecisionLenderShowField__c/fields/FTP_Interest_Expense__c.field-meta.xml
<CustomField>
    <fullName>FTP_Interest_Expense__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FTP Interest Expense</label>
    <type>Checkbox</type>
</CustomField>