force-app/main/default/objects/PrecisionLenderShowField__c/fields/FTP_ROA__c.field-meta.xml
<CustomField>
    <fullName>FTP_ROA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FTP ROA</label>
    <type>Checkbox</type>
</CustomField>