force-app/main/default/objects/PrecisionLenderShowField__c/fields/FTP_ROE__c.field-meta.xml
<CustomField>
    <fullName>FTP_ROE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FTP ROE</label>
    <type>Checkbox</type>
</CustomField>