force-app/main/default/objects/PrecisionLenderShowField__c/fields/Loan_Average_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Average_Balance__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Loan Average Balance</label>
    <type>Checkbox</type>
</CustomField>