force-app/main/default/objects/PrecisionLenderShowField__c/fields/Total_Loan_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Commitment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Total Loan Commitment</label>
    <type>Checkbox</type>
</CustomField>