force-app/main/default/objects/PrecisionLenderShowField__c/fields/Total_Relationship_FTP_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Relationship_FTP_Net_Income__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Total Relationship FTP Net Income</label>
    <type>Checkbox</type>
</CustomField>