force-app/main/default/objects/PrecisionLenderShowField__c/fields/Total_Relationship_FTP_ROA__c.field-meta.xml
<CustomField>
    <fullName>Total_Relationship_FTP_ROA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Total Relationship FTP ROA</label>
    <type>Checkbox</type>
</CustomField>