force-app/main/default/objects/PrecisionLenderShowField__c/fields/Total_Relationship_FTP_Target_ROE__c.field-meta.xml
<CustomField>
    <fullName>Total_Relationship_FTP_Target_ROE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Total Relationship FTP Target ROE</label>
    <type>Checkbox</type>
</CustomField>